vente en attente modal